fixed spacing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -66,7 +66,7 @@
 .foot {
   z-index: 10;
   position: fixed;
-  height: 3em;
+  height: 2.5em;
   left: 0;
   bottom: 0;
   width: 100%;
